Make the grid capable of displaying a scrollbar for the people report use case Fixes: LP #715860. - on IE, the vertical scrollbar does not fall out of the grid - on all other browsers, the horizontal scrollbar is avoided

--- a/karl/views/static/jquery-ui/ui.custom.css
+++ b/karl/views/static/jquery-ui/ui.custom.css
@@ -9,6 +9,9 @@
 .ui-grid-content {
     vertical-align: top;
     overflow: auto;
+    overflow: -moz-scrollbars-vertical;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .ui-grid-footer {
